# BackApp

./: .env.example  .gitignore  BACKUP_CONTROL_CENTER_MASTER_PROMPT.md  BACKUP_CONTROL_CENTER_SPEC.md  PROMPT_AGENTE_CLASIFICACION_BACKUPS.md  README.md  manage.py  pyproject.toml
apps/backups/: admin.py  forms.py  models.py  urls.py  views.py
apps/customers/: admin.py  forms.py  models.py  urls.py  views.py
apps/imports/: admin.py  forms.py  legacy_history.py  models.py  services.py  urls.py  views.py
apps/ingestion/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/inventory/: admin.py  forms.py  models.py  urls.py  views.py
apps/operations/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/parsers/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/tenancy/: admin.py  context_processors.py  models.py  services.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
docs/decisions/: 0001-phase-1-foundation.md  0002-phase-2-backup-inventory.md  0003-phase-3-import-and-manual-control.md  0004-phase-4-expected-executions.md  (+7 more)
openspec/: config.yaml
templates/: base.html
tests/: test_phase1_tenant_boundary.py  test_phase1_views.py  test_phase2_backup_inventory.py  test_phase3_imports_and_manual_control.py  test_phase4_expected_executions.py  test_phase5_mail_connectors.py  test_phase6_parser_registry_review.py  test_phase7_backup_execution_matching.py  test_phase8_static_mail_classifier.py  test_phase9_legacy_backup_history_import.py
(+76 files in other folders)
