[project]
name = "backup-control-center"
version = "0.1.0"
description = "Tenant-aware backup operations control center"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "django-htmx>=1.23,<2.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.9,<5.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
exclude = ["runtime*", "static*", "templates*", "tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.coverage.run]
source = ["apps", "config"]
